apps/frontend/base/30_service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitops-demo-frontend
