apps/frontend/base/62_netpol_allow_ingress_from_traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-traefik
spec:
  # ingress only fro traefike
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitops-demo-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 80
