apps/frontend/base/63_netpol_allow_egress_to_backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-backend
spec:
  # egress for backend
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitops-demo-frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backend
          podSelector:
            matchLabels:
              app.kubernetes.io/name: gitops-demo-backend
      ports:
        - protocol: TCP
          port: 8080
